API/K8S/Ingress/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: endeavourgroup.com
    http:
      paths:
      - path: /api/catalogueproduct
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service-clusterip-srv
            port:
              number: 80
      - path: /api/productprice
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service-clusterip-srv
            port:
              number: 80
      - path: /api/trolley
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service-clusterip-srv
            port:
              number: 80
      - path: /api/photos
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service-clusterip-srv
            port:
              number: 80
